Skip empty lines (all words were not in vector words during preprocessing).